# didcomm-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  ecdsa_private_key.p8
.cargo-husky/hooks/: pre-commit
.github/workflows/: rust.yml
didcomm-rs_swift_tests/didcomm-rs_swift_tests.xcodeproj/: project.pbxproj
didcomm-rs_swift_tests/didcomm-rs_swift_tests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
didcomm-rs_swift_tests/didcomm-rs_swift_tests.xcodeproj/project.xcworkspace/xcuserdata/mccown.xcuserdatad/: UserInterfaceState.xcuserstate
didcomm-rs_swift_tests/didcomm-rs_swift_tests.xcodeproj/xcuserdata/mccown.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
didcomm-rs_swift_tests/didcomm-rs_swift_tests.xcodeproj/xcuserdata/mccown.xcuserdatad/xcschemes/: xcschememanagement.plist
didcomm-rs_swift_tests/didcomm-rs_test_app/: main.swift
didcomm-rs_swift_tests/didcomm-rs_test_app/didcomm-rs-tests/: common.swift
src/: didcomm-rs.uniffi.udl  didcomm-rs.uniffi.uniffi.rs  didcomm_rs.swift  didcomm_rsFFI.h  didcomm_rsFFI.modulemap  error.rs  lib.rs  result.rs
src/crypto/: encryptor.rs  mod.rs  signer.rs
src/dids/: generic.rs  jolo.rs  mod.rs
src/messages/: attachment.rs  biscuit.rs  didurl.rs  headers.rs  into.rs  jwe.rs  jwk.rs  jws.rs  mediated.rs  message.rs  message_raw_crypto.rs  mod.rs  out_of_band.rs  prior_claims.rs  problem_report.rs  raw.rs  serialization.rs  signatures.rs  types.rs
src/messages/headers/: decorators.rs  didcomm.rs  headers.rs  jwk.rs  jwm.rs  mod.rs  prior_claims.rs  types.rs
src/messages/helpers/: encryption.rs  getters.rs  mod.rs  receive.rs  serialization.rs
src/util/: base64helper.rs  mod.rs
test_resources/: ec256-key-pair.pem
tests/: common.rs  jwe_envelopes.rs  jws_envelopes.rs  message_type.rs  out_of_band.rs  routing_tests.rs  send_receive.rs  shape.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
