[package]
name = "didcomm_rs"
version = "0.2.0"
authors = ["Ivan Temchenko <35359595i@gmail.com>"]
edition = "2018"
description = "DIDComm messaging v2 specifications implementation: https://identity.foundation/didcomm-messaging/spec/"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-url = "1.4.8"
# Raw crypto dependancies
chacha20poly1305 = { version = "0.7", optional = true }
aes-gcm = { version = "0.8", optional = true }
k256 = { version = "0.7.2", optional = true, features = ["ecdsa", "sha256"] }
p256 = { version = "0.7", optional = true, features = ["ecdsa"] }
ed25519-dalek = { version = "1.0", optional = true }
# cbor = "0.4"

# Other
num = "0.3"
regex = "1"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
sodiumoxide = "0.2.6"
rand_core = "0.5"
did_doc = { git = "https://github.com/chunningham/did" }
x25519-dalek = "1.1"

[features]
default = ["raw-crypto"]
raw-crypto = ["chacha20poly1305", "aes-gcm", "k256", "p256", "ed25519-dalek"]
