[package]
name = "didcomm-rs"
version = "0.6.1"
authors = ["Ivan Temchenko <35359595i@gmail.com>"]
edition = "2018"
repository = "https://github.com/decentralized-identity/didcomm-rs"
documentation = "https://docs.rs/didcomm-rs/"
description = "DIDComm messaging v2 specifications implementation: https://identity.foundation/didcomm-messaging/spec/"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-url = "1.4.9"
# Raw crypto dependancies
chacha20poly1305 = { version = "0.8", optional = true }
aes-gcm = { version = "0.9.2", optional = true }
libaes = { version = "0.6.1", optional = true }
k256 = { version = "0.9.4", optional = true, features = ["ecdsa", "sha256", "zeroize"] }
p256 = { version = "0.9.0", optional = true, features = ["ecdsa", "zeroize"] }
ed25519-dalek = { version = "1.0", optional = true }
ddoresolver-rs = { version = "0.3.2", features = ["didkey", "keriox"], optional = true }
x25519-dalek = "1.1"
arrayref = "0.3"
# cbor = "0.4"

# Other
regex = "1"
rand = "0.8"
rand_chacha = "0.3.0"
thiserror = "1.0"

[dev-dependencies]
sodiumoxide = "0.2.6"
rand_core = "0.5"
base58 = "0.2.0"

[features]
default = ["raw-crypto", "resolve"]
raw-crypto = ["chacha20poly1305", "aes-gcm", "k256", "p256", "ed25519-dalek", "libaes"]
resolve = ["ddoresolver-rs"]

