[package]
name = "didcomm-rs"
version = "0.7.0"
authors = ["Ivan Temchenko <35359595i@gmail.com>", "Sebastian Wolfram <wulfraem@users.noreply.github.com>", "Sebastian Dechant <763247+S3bb1@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/decentralized-identity/didcomm-rs"
documentation = "https://docs.rs/didcomm-rs/"
description = "DIDComm messaging v2 specifications implementation: https://identity.foundation/didcomm-messaging/spec/"
license = "Apache-2.0"

[workspace]
members = [
    "utilities",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
base64-url = "1.4.9"
# Raw crypto dependancies
chacha20poly1305 = { version = "0.8", optional = true }
aes-gcm = { version = "0.9.2", optional = true }
libaes = { version = "0.6.1", optional = true }
k256 = { version = "0.9.4", optional = true, features = ["ecdsa", "sha256", "zeroize"] }
p256 = { version = "0.9.0", optional = true, features = ["ecdsa", "zeroize"] }
ed25519-dalek = { version = "1.0", optional = true }
hex = { version = "0.4.3", features = ["serde"] }
ddoresolver-rs = { version = "0.4.2", default-features = false, features = ["didkey", "keriox"], optional = true }
x25519-dalek = "1.1"
arrayref = "0.3"
chrono = "0.4"
uuid = { version = "0.8.2", features = ["v4"] }
sha2 = "0.8.1"

# Other
env_logger = "0.9.0"
log = "0.4.8"
regex = "1"
rand = "0.8"
rand_chacha = "0.3.0"
thiserror = "1.0"
paste = "1.0.5"
rand_core = "0.5.1"

[dev-dependencies]
sodiumoxide = "0.2.6"
base58 = "0.2.0"
utilities = { path = "./utilities" }
quickcheck = "1"
quickcheck_macros = "1"
fake = { version = "2.4", features = ["uuid"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[features]
default = ["raw-crypto", "resolve", "out-of-band"]
raw-crypto = ["chacha20poly1305", "aes-gcm", "k256", "p256", "ed25519-dalek", "libaes"]
resolve = ["ddoresolver-rs"]
out-of-band = []

